@@ -5,6 +5,7 @@ Version 1.19.0 *
 - added virtual project, i.e. only create a gsp file on a certain number of files or if a main file is there
 - improved allow to close non-mainfile while running
 - improved select next project when closing the current edited file-node in the Project Explorer that is also part of other projects
+- added zoom support for model dialog
 
 Version 1.18.5
 ==================
